--- a/3.webpack-project-lanou/www/index.html
+++ b/3.webpack-project-lanou/www/index.html
@@ -6,5 +6,5 @@
 <link href="css/bundle.css" rel="stylesheet"></head>
 <body>
 	<div id="app"></div>
-<script type="text/javascript" src="js/common.js"></script><script type="text/javascript" src="js/bundle.js"></script></body>
+<script type="text/javascript" src="js/vendor.js"></script><script type="text/javascript" src="js/bundle.js"></script></body>
 </html>
